# TPC

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  global.json
cmake/: Findlibdatachannel.cmake  Findlibjuice.cmake
installer/: tpcwei.iss
native/include/: file_transfer.h  gateway_manager.h  nat_traversal.h  p2p_core.h  platform_api.h  proxy_manager.h  security.h  stream_manager.h  tunnel_manager.h
native/src/: gateway_manager.cpp  p2p_core.cpp  proxy_manager.cpp  tpcwei_gateway.cpp
src/TPCwei.Agent/: Program.cs  TPCwei.Agent.csproj
src/TPCwei.App/Controls/: TrafficGraph.cs
src/TPCwei.App/Interop/: NativeInterop.cs
src/TPCwei.App/Models/: AppModels.cs
src/TPCwei.App/Services/: AgentClient.cs  FrpImportService.cs  GatewayDeployService.cs  PersonalizationStore.cs  ProfileStore.cs  SecureSecretStore.cs
src/TPCwei.App/ViewModels/: ConnectionPageViewModel.cs  FileTransferPageViewModel.cs  GamePageViewModel.cs  MainWindowViewModel.cs  ObservableObject.cs  RemoteDesktopPageViewModel.cs  SecurityPageViewModel.cs  SettingsPageViewModel.cs
src/TPCwei.WinUI/: App.xaml  App.xaml.cs  ShellWindow.xaml  ShellWindow.xaml.cs  TPCwei.WinUI.csproj  TrafficChart.cs  Win32TrayIcon.cs  app.manifest
src/tpcwei_meshd/: Cargo.toml
src/tpcwei_meshd/.cargo/: config.toml
src/tpcwei_meshd/src/: main.rs
